<resources>
    <string name="app_name">TaskManager</string>
    <string name="new_task">New task</string>
    <string name="edit_text_title_hint">Title</string>
    <string name="edit_text_commentary_hint">Description</string>
    <string name="cancel_button_text">CANCEL</string>
    <string name="save_button_text">SAVE</string>
    <string name="dummy_text">dummy text</string>
    <string name="enter_title">Title may not be empty</string>
    <string name="menu_fill_title">Create random tasks</string>
    <string name="menu_remove_all_title">Delete all tasks</string>
    <string name="context_menu_edit_title">Edit</string>
    <string name="context_menu_restart_title">Restart</string>
    <string name="context_menu_delete_title">Delete</string>
    <string name="task_list_activity_title">Current tasks</string>
    <string name="new_task_activity_title">New task</string>
    <string name="edit_task_activity_title">Edit task</string>
    <string name="task_finished">Task finished</string>
    <string name="task_finished_in">Task finished in</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_new_task">New task</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_sort_az">A-Z</string>
    <string name="menu_sort_za">Z-A</string>
    <string name="menu_sort_new_old">Newer first</string>
    <string name="menu_sort_old_new">Older first</string>
    <string name="pref_task_colors_title">Task background colors</string>
    <string name="settings_activity_title">Settings</string>
    <string name="choose_idle_task_color">Idle task color</string>
    <string name="choose_started_task_color">Started task color</string>
    <string name="choose_finished_task_color">Finished task color</string>
    <string name="pref_restore_default_colors">Restore default colors</string>
    <string name="pref_idle_task_color">Idle</string>
    <string name="pref_started_task_color">Started</string>
    <string name="pref_finished_task_color">Finished</string>
    <string name="dialog_restore_default_colors">Restore default colors?</string>
    <string name="ok_label">Ok</string>
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Cancel</string>
    <string name="press_back_again_to_exit">Press BACK again to exit</string>
    <string name="dialog_delete_all_tasks">Delete all tasks?</string>
    <string name="enter_title_voice_rec_prompt">Title</string>
    <string name="enter_commentary_voice_rec_prompt">Description</string>
    <string name="pref_default_task_duration">Default task duration</string>
    <string name="dialog_set_default_task_duration">Default task duration</string>
    <string name="pref_other_title">Other</string>
    <string name="dialog_set_max_task_duration_description">(0 - tasks will not end automatically)</string>
    <string name="task_will_finish_at_sec">Tasks will finish automatically in %d sec</string>
    <string name="task_will_not_finish">Tasks will not finish automatically</string>
    <string name="edit_text_max_task_duration_hint">Max task duration</string>
    <string name="task_exec_frequency">Task execution frequency</string>
    <string name="image_crop_activity_title">Choose a miniature</string>
    <string name="image_source_picker_dialog_title">Select image source</string>
    <string name="dialog_delete_all_tasks_forever">Delete information about removed tasks?</string>
    <string name="menu_refresh">Refresh statistics</string>
    <string name="menu_remove_all_forever">Remove all forever</string>
    <string name="duration_must_be_lower_than_frequency">Task max duration must be lower than its repeat period</string>
    <string name="task_location_select_activity_title">Select location of task execution</string>
    <string name="task_finished_max_duration_exceeded_message">Max duration exceeded</string>
    <string name="finished">finished</string>
    <string name="task_finished_location_left_message">You left task location</string>
    <string name="started">started</string>
    <string name="task_started_location_entered_message">You entered task location</string>
    <string name="new_task_button_tutorial_title">New task</string>
    <string name="new_task_button_tutorial_text">Press this button to create your first task!</string>
    <string name="sorting_tutorial_title">Sorting</string>
    <string name="sorting_tutorial_text">You can select task sorting type by pressing this button</string>
    <string name="settings_tutorial_title">Settings</string>
    <string name="settings_tutorial_text">Here you can change task backgrounds and select default duration</string>
    <string name="task_location_tutorial_title">Task location</string>
    <string name="task_location_tutorial_text">You can specify location where task should be executed. It will be started automatically when you come close to it and finished when you leave.</string>
    <string-array name="task_frequency_variants">
        <item>Execute once</item>
        <item>Repeat every 10 seconds (testing)</item>
        <item>Repeat every day</item>
        <item>Repeat every week</item>
        <item>Repeat every month</item>
        <item>Repeat every year</item>
    </string-array>
    <string-array name="image_source_picker_dialog_choices">
        <item>Gallery</item>
        <item>Camera</item>
    </string-array>
    <string-array name="task_list_tabs">
        <item>Task list</item>
        <item>Statistics</item>
    </string-array>
</resources>
