<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/task_editor_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/task_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerInside"
            android:background="@mipmap/avatar_picker_background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/edit_text_title_hint"
                        android:maxLines="1">
                    </android.support.design.widget.TextInputEditText>

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/edit_text_title_voice_recognition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:src="@drawable/ic_mic_black_24dp"
                    android:padding="@dimen/image_button_padding"
                    android:background="@color/menu_item_background"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_commentary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:hint="@string/edit_text_commentary_hint"
                        android:maxLines="3"/>
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/edit_text_commentary_voice_recognition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:src="@drawable/ic_mic_black_24dp"
                    android:padding="@dimen/image_button_padding"
                    android:background="@color/menu_item_background"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_max_task_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:hint="@string/edit_text_max_task_duration_hint"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner_task_exec_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"/>

    <FrameLayout
        android:id="@+id/map_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        >
        <ImageView
            android:id="@+id/map_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/map_placeholder"
            android:layout_gravity="center"/>
        <FrameLayout
            android:id="@+id/map_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:id="@+id/map_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/edit_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/image_button_padding"
                android:src="@drawable/ic_edit_black_24dp"
                android:background="@color/map_button_selector"/>
            <ImageButton
                android:id="@+id/delete_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/image_button_padding"
                android:src="@drawable/ic_delete_black_24dp"
                android:background="@color/map_button_selector"/>
        </LinearLayout>

    </FrameLayout>


</LinearLayout>